force-app/main/default/objects/QuoteLineItem/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>