force-app/main/default/objects/QuoteLineItem/fields/BillFrom__c.field-meta.xml
<CustomField>
    <fullName>BillFrom__c</fullName>
    <formula>IF(CONTAINS(Billfrom_ID__r.Name , &apos;LF Asia, LLC&apos;) , Billfrom_ID__r.Name , IF(Billfrom_ID__r.Subsidiary_ID__c = 1 , &apos;The Linux Foundation&apos; , Billfrom_ID__r.Name ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillFrom</label>
    <type>Text</type>
</CustomField>