force-app/main/default/objects/QuoteLineItem/fields/Billfrom_ID__c.field-meta.xml
<CustomField>
    <fullName>Billfrom_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billfrom ID</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Quote Line Items (Bill From)</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>