force-app/main/default/objects/QuoteLineItem/fields/BillfromIncorporatd__c.field-meta.xml
<CustomField>
    <fullName>BillfromIncorporatd__c</fullName>
    <formula>IF(ISPICKVAL(Billfrom_ID__r.Category__c , &apos;Incorporated Entity&apos;) || CONTAINS(Billfrom_ID__r.Name , &apos;LF Asia&apos;) , Billfrom_ID__r.Name ,&apos;The Linux Foundation&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillfromIncorporatd</label>
    <type>Text</type>
</CustomField>