force-app/main/default/objects/QuoteLineItem/fields/Billing_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Items (Billing Contact2)</relationshipLabel>
    <relationshipName>Quote_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>