force-app/main/default/objects/QuoteLineItem/fields/Billing_Contact3__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Items (Billing Contact3)</relationshipLabel>
    <relationshipName>Quote_Line_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>