force-app/main/default/objects/QuoteLineItem/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Items (Billing Contact)</relationshipLabel>
    <relationshipName>Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>