force-app/main/default/objects/QuoteLineItem/fields/Check_BillfromID__c.field-meta.xml
<CustomField>
    <fullName>Check_BillfromID__c</fullName>
    <formula>IF(NOT(BEGINS( BillFrom__c , &apos;The&apos;)) , BillFrom__c ,RIGHT( BillFrom__c , LEN(BillFrom__c)-3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check BillfromID</label>
    <type>Text</type>
</CustomField>