force-app/main/default/objects/QuoteLineItem/fields/Clone_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Clone_Unit_Price__c</fullName>
    <formula>ROUND(UnitPrice,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>