force-app/main/default/objects/QuoteLineItem/fields/Cost_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Student__c</fullName>
    <formula>RollUp_UnitPrice__c  /  Quantity</formula>
    <label>Cost per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>