force-app/main/default/objects/QuoteLineItem/fields/Cost_Price_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_per_Student__c</fullName>
    <formula>IF(
NOT(ISNULL(Discount_in_amount__c)),
Initial_Price__c ,
UnitPrice
)</formula>
    <label>Cost Price per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>