force-app/main/default/objects/QuoteLineItem/fields/Discount_Amount_per_Product__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_per_Product__c</fullName>
    <formula>IF(
NOT(ISNULL(Discount)),
Discount_Amount__c,
IF(
NOT(ISNULL(Discount_in_amount__c)),
Discount_in_amount__c / Quantity,
0
)
)</formula>
    <label>Discount Amount per Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>