force-app/main/default/objects/QuoteLineItem/fields/Discount_in_amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_amount__c</fullName>
    <inlineHelpText>Discount Dollar Amount ($) enter as an amount</inlineHelpText>
    <label>Discount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>