force-app/main/default/objects/QuoteLineItem/fields/Discount_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Discount_per_Student__c</fullName>
    <formula>RollUp_Discount__c /  Quantity</formula>
    <label>Discount per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>