force-app/main/default/objects/QuoteLineItem/fields/Discounted_Net_Price_Per_Student__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Net_Price_Per_Student__c</fullName>
    <formula>IF(
NOT(ISNULL(Discount_in_amount__c)),
UnitPrice,
Net_Price__c
)</formula>
    <label>Discounted Net Price Per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>