force-app/main/default/objects/QuoteLineItem/fields/End_Tier__c.field-meta.xml
<CustomField>
    <fullName>End_Tier__c</fullName>
    <label>End Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>