force-app/main/default/objects/QuoteLineItem/fields/Engagement_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Term_Length__c</fullName>
    <formula>FLOOR((End_Date__c - Start_Date__c) / 30)</formula>
    <label>Engagement Term Length(in month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>