force-app/main/default/objects/QuoteLineItem/fields/Engagement_Term_Length_in_days__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Term_Length_in_days__c</fullName>
    <formula>(End_Date__c -  Start_Date__c) + 1</formula>
    <label>Engagement Term Length(in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>