force-app/main/default/objects/QuoteLineItem/fields/Event_LF_Asia_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_LF_Asia_Address__c</fullName>
    <formula>IF(Is_BillFrom_LF_Asia__c == &quot;True&quot;, $Label.Event_LF_Asia_Address, $Label.Foundation_Address)</formula>
    <label>Event_LF_Asia_Address</label>
    <type>Text</type>
</CustomField>