force-app/main/default/objects/QuoteLineItem/fields/Event_State__c.field-meta.xml
<CustomField>
    <fullName>Event_State__c</fullName>
    <formula>IF(Is_BillFrom_LF_Asia__c  == &quot;True&quot;, &quot;Delaware&quot;, &quot;California&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event State</label>
    <type>Text</type>
</CustomField>