force-app/main/default/objects/QuoteLineItem/fields/Final_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Final_Subtotal__c</fullName>
    <formula>Net_Price__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>