force-app/main/default/objects/QuoteLineItem/fields/Is_BillFrom_LF_Asia__c.field-meta.xml
<CustomField>
    <fullName>Is_BillFrom_LF_Asia__c</fullName>
    <formula>IF( CONTAINS(Billfrom_ID__r.Name , &apos;LF Asia&apos;) ,&apos;True&apos;,&apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BillFrom LF Asia</label>
    <type>Text</type>
</CustomField>