force-app/main/default/objects/QuoteLineItem/fields/LF_Asia_Address__c.field-meta.xml
<CustomField>
    <fullName>LF_Asia_Address__c</fullName>
    <formula>$Label.LF_Asia_Address_Conga</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LF Asia Address</label>
    <type>Text</type>
</CustomField>