force-app/main/default/objects/QuoteLineItem/fields/Netprice_Per_Student__c.field-meta.xml
<CustomField>
    <fullName>Netprice_Per_Student__c</fullName>
    <formula>RollUp_TotalPrice__c / Quantity</formula>
    <label>Netprice Per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>