force-app/main/default/objects/QuoteLineItem/fields/Number_Of_Years_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Years_Required__c</fullName>
    <label>Number Of Years Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>