force-app/main/default/objects/QuoteLineItem/fields/Parent_OppLineItem__c.field-meta.xml
<CustomField>
    <fullName>Parent_OppLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent OppLineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>