force-app/main/default/objects/QuoteLineItem/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Details</label>
    <referenceTo>Product_Details__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>