force-app/main/default/objects/QuoteLineItem/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>IF(NOT(ISBLANK(Projects__c)),HYPERLINK(&quot;/&quot;+Projects__c,Projects__r.Name,&quot;_top&quot;), 
IF(NOT(ISBLANK(Event__c)),HYPERLINK(&quot;/&quot;+Event__c,Event__r.Name,&quot;_top&quot;),IF(NOT(ISBLANK(Training__c)),HYPERLINK(&quot;/&quot;+Training__c,Training__r.Name,&quot;_top&quot;),&quot;&quot;)) 
)</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>