force-app/main/default/objects/QuoteLineItem/fields/Representative_Voting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Representative_Voting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative/Voting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Items (Representative/Voting Contact)</relationshipLabel>
    <relationshipName>Voting_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>