force-app/main/default/objects/QuoteLineItem/fields/RollUp_Discount__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Discount__c</fullName>
    <label>RollUp Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>