force-app/main/default/objects/QuoteLineItem/fields/RollUp_Netprice__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Netprice__c</fullName>
    <label>RollUp Netprice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>