force-app/main/default/objects/QuoteLineItem/fields/RollUp_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Quantity__c</fullName>
    <label>RollUp Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>