force-app/main/default/objects/QuoteLineItem/fields/RollUp_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>RollUp_TotalPrice__c</fullName>
    <label>RollUp TotalPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>