force-app/main/default/objects/QuoteLineItem/fields/RollUp_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>RollUp_UnitPrice__c</fullName>
    <label>RollUp UnitPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>