force-app/main/default/objects/QuoteLineItem/fields/TaxClass__c.field-meta.xml
<CustomField>
    <fullName>TaxClass__c</fullName>
    <label>Tax Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>