force-app/main/default/objects/QuoteLineItem/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>