force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_Discount_And_SP_Membership_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Discount_And_SP_Membership_Prod</fullName>
    <active>true</active>
    <description>AND(OR(Discount &gt; 0, AND(NOT(ISNEW()),PRIORVALUE(UnitPrice) &lt;&gt; UnitPrice)),ISPICKVAL(Product2.Family, &apos;Membership&apos;))</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Product2.Family , &quot;Membership&quot;), 
NOT(ISNEW()), 
OR(ISCHANGED( Clone_Unit_Price__c ) , NOT( ISBLANK( Discount )) ), 
NOT($Profile.Name = &apos;System Admin Custom&apos; ),NOT($Profile.Name = &apos;System Administrator&apos; ) 
)</errorConditionFormula>
    <errorMessage>Neither Discount can be given nor the Sales Price can be updated for the Membership Products</errorMessage>
</ValidationRule>